<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/label_menu"
        android:icon="@drawable/ic_baseline_label_32"
        android:title="@string/label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/delete_menu"
        android:icon="@drawable/ic_baseline_delete_32"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_baseline_favorite_border_32"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:id="@+id/save_menu"
        android:icon="@drawable/ic_baseline_save_32"
        android:title="@string/save"
        app:showAsAction="always" />

</menu>