<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_margin="5dp"
    android:background="@drawable/background_item_labels_child"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_32"
        android:contentDescription="@string/right_arrow" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:ellipsize="end"
            android:gravity="center|start"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/title"
            android:textColor="?attr/colorControlNormal"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:ellipsize="end"
            android:gravity="center|start"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/date"
            android:textColor="?attr/colorControlNormal"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>


</LinearLayout>