<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_margin="5dp"
    android:background="@drawable/background_item_favorites"
    android:padding="5dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_v1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ellipsize="end"
        android:gravity="center|start"
        android:maxLines="1"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#20FFFFFF"
        android:ellipsize="end"
        android:gravity="center|start"
        android:maxLines="1"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_v1"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_h1" />

    <ImageButton
        android:id="@+id/favoriteBorder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/add_remove_to_favorites"
        android:src="@drawable/ic_baseline_favorite_border_32"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toStartOf="@id/delete"
        app:layout_constraintStart_toStartOf="@id/guideline_v1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/delete"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_baseline_delete_32"
        app:layout_constraintBottom_toTopOf="@id/guideline_h1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/favoriteBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#20FFFFFF"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="10"
        android:maxLines="1"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_v1"
        app:layout_constraintTop_toBottomOf="@id/guideline_h1" />


</androidx.constraintlayout.widget.ConstraintLayout>