<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        app:cardCornerRadius="2dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <AutoCompleteTextView
                android:id="@+id/enterLabel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:completionThreshold="1"
                android:gravity="center"
                android:hint="@string/enter_label"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="?attr/colorControlNormal"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/showLabels"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/showLabels"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/show_labels"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/enterLabel" />

            <Button
                android:id="@+id/close"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="7dp"
                android:text="@string/close"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/save"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showLabels"
                app:layout_goneMarginEnd="5dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="7dp"
                android:text="@string/save"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/close"
                app:layout_constraintTop_toTopOf="@id/close"
                tools:ignore="ButtonStyle" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</RelativeLayout>